# ls-portfolio-lab

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  REFERENCES.md  config.yaml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/components/: chart_gallery.py  metrics_panel.py  portfolio_table.py
app/pages/: paper_portfolio.py  pm_scorecard.py  portfolio_view.py  trade_simulator.py
app/state/: __init__.py  persistence.py  session.py
core/: __init__.py  factor_model.py  mock_portfolio.py  portfolio.py  rebalancer.py  trade_impact.py
core/metrics/: __init__.py  attribution.py  correlation_metrics.py  drawdown_analytics.py  drawdown_metrics.py  exposure_metrics.py  pm_performance.py  quality_score.py  return_metrics.py  risk_metrics.py  sharpe_inference.py  technical_metrics.py
data/: __init__.py  bloomberg_provider.py  cache.py  ib_provider.py  ingest.py  provider.py  provider_factory.py  sector_map.py  universe.py  yahoo_provider.py
history/: __init__.py  performance.py  snapshot.py  trade_log.py
tests/: test_drawdown_analytics.py  test_factor_model.py  test_history.py  test_ingest.py  test_mock_portfolio.py  test_portfolio.py  test_rebalancer.py  test_trade_impact.py
tests/test_metrics/: test_attribution.py  test_correlation_metrics.py  test_drawdown_metrics.py  test_exposure_metrics.py  test_pm_performance.py  test_quality_score.py  test_return_metrics.py  test_risk_metrics.py  test_sharpe_inference.py  (+1 more)
